# torch-interpol

./: .gitattributes  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
.conda/: Hello DHL Firelight  meta.yaml
.github/.conda/: meta.yaml
.github/actions/: publish.yaml  test.yaml
.github/actions/conda/: action.yaml
.github/actions/publish/: action.yaml
.github/actions/pypi/: action.yaml
.github/actions/test/: action.yaml
.github/workflows/: publish-conda-from-pypi.yaml  publish.yaml  test-and-publish.yaml
apps/deepsplinereg/: datasets.py  loadable.py  models.py  splinelayers.py
apps/splinereg/: lbfgs.py  register.py  run.py
examples/: bsplines.ipynb  bsplines_mse.ipynb  bsplines_new.ipynb  bsplines_primer.ipynb  bsplines_symbolic.ipynb  conv.ipynb  interpolate.ipynb  issue15.ipynb  resize.ipynb  rotation.ipynb
interpol/: __init__.py  _version.py  api.py  autograd.py  bounds.py  coeff.py  energies.py  energies_fft.py  energies_nofft.py  iso0.py  iso1.py  jit_utils.py  jitfields.py  layers.py  nd.py  padding.py  pushpull.py  regularizers.py  resize.py  restrict.py  splines.py  utils.py
interpol/demo/: backbones.py  datasets.py  experiment_pyr.py  experiment_vxm.py  layers.py  loadable.py  losses.py  models.py
interpol/tests/: test_coeff.py  test_gradcheck_pushpull.py
