[metadata]
name = torch-interpol
author = Yael Balbastre <yael.balbastre@gmail.com>
author_email = yael.balbastre@gmail.com
description = High-order spline interpolation in PyTorch
long_description = file:README.md
long_description_content_type = text/markdown
platforms = OS Independent
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Medical Science Apps.
project_urls =
    Source Code=https://github.com/balbasty/torch-interpol

[options]
python_requires = >= 3.6
# we should be able to make all numpy/scipy dependencies optional
install_requires = torch >= 1.3

[versioneer]
VCS = git
style = pep440
versionfile_source = interpol/_version.py
versionfile_build = interpol/_version.py
tag_prefix =
parentdir_prefix =
